Packaging correctly and running

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
       // install babel hooks in the renderer process
       require('babel-register');
-      require('./scripts/main');
+      require('./scripts/main.js');
     </script>
   </body>
 </html>
