Packages and babel presents update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="app"></div>
     <script>
       // install babel hooks in the renderer process
-      require('babel-register');
+      require('@babel/register');
       require('./scripts/main');
     </script>
   </body>
